--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,13 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:backupAgent="TheBackupAgent" >
+
+        <!--android api key for backup service-->
+        <meta-data android:name="com.google.android.backup.api_key"
+            android:value="AEdPqrEAAAAI3XYI8moOSJ2_YSPgb1u1-hzl-tujkdlAEsglDw" />
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
